--- a/RushipesWeb_V1/appsettings.json
+++ b/RushipesWeb_V1/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-F9QBLBOT;Database=RushipesDb;Trusted_Connection=True;TrustServerCertificate=Yes"
+  }
 }
