--- a/RushipesWeb_V1/appsettings.Production.json
+++ b/RushipesWeb_V1/appsettings.Production.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:rushipes.database.windows.net,1433;Initial Catalog=Rushipes;Persist Security Info=False;User ID=sqladmin;Password=TheJLuc23452846;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:rushipesv1.database.windows.net,1433;Initial Catalog=Rushipes_V1;Persist Security Info=False;User ID=adminsql;Password=Admin@1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
